--- a/src/app/students/std-events/std-events.component.html
+++ b/src/app/students/std-events/std-events.component.html
@@ -1,11 +1,11 @@
-<a href="/event/add" class="btn btn-primary">Create Event</a>
+
 <table class="table">
     <thead>
         <tr>
             <th>id</th>
             <th>title</th>
             <th>date</th>
-            <th>Optiones</th>
+            <!-- <th>Optiones</th> -->
         </tr>
     </thead>
     <tbody>
@@ -13,13 +13,13 @@
             <td>{{event._id}}</td>
             <td>{{event.title}}</td>
             <td>{{event.eventDate}}</td>
-            <td>
+            <!-- <td>
                 <button class="btn btn-primary" (click)="editEvent(event._id)">Edit</button>
                 <span> | </span>
                 <button class="btn btn-danger" (click)="deleteEvent(event._id)">Delete</button>
                 <span> | </span>
                 <button class="btn btn-success" (click)="detailsEvent(event._id)">Details</button>
-            </td>
+            </td> -->
         </tr>
     </tbody>
 </table>
