--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,9 +1,9 @@
 <h3>Admin Home</h3>
 <div>
-    <button class="btn btn-primary">Students</button>
+    <button class="btn btn-primary" (click)="studentList()">Students</button>
     <span> | </span>
     <button class="btn btn-primary" (click)="eventList()">Events</button>
     <span> | </span>
-    <button class="btn btn-primary">Speakers</button>
+    <button class="btn btn-primary"  (click)="speakersList()">Speakers</button>
 </div>
     
